remove unused config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "NODE_ENV=development webpack serve --hot",
+    "dev": "NODE_ENV=development webpack serve",
     "build": "NODE_ENV=production webpack"
   },
   "devDependencies": {
