--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "css-loader": "^6.7.1",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
