--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
