--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@types/react-dom": "~19.2.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "fork-ts-checker-webpack-plugin": "~9.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.3",
-    "typescript-plugin-css-modules": "^3.4.0",
+    "ts-loader": "~9.5.4",
+    "typescript": "5.9.3",
+    "typescript-plugin-css-modules": "~5.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
