--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.2",
     "@types/react": "~19.2.7",
     "@types/react-dom": "~19.2.3",
+    "@types/webpack": "~5.28.5",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "fork-ts-checker-webpack-plugin": "~9.1.0",
@@ -18,6 +19,7 @@
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.11",
     "ts-loader": "~9.5.4",
+    "ts-node": "~10.9.2",
     "typescript": "5.9.3",
     "typescript-plugin-css-modules": "~5.2.0",
     "webpack": "^5.103.0",
