--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
       "ESNext"
     ],
     "jsx": "react-jsx",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "baseUrl": ".",
     "resolveJsonModule": true,
     "sourceMap": true,
@@ -21,5 +21,11 @@
         "name": "typescript-plugin-css-modules"
       }
     ]
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "allowSyntheticDefaultImports": true
+    }
   }
 }
